Prrojects/4_AST/BKITParser.py
# Generated from BKIT.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readInteger'", "'printInteger'", "'readFloat'", 
                     "'printFloat'", "'readBoolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'", 
                     "<INVALID>", "<INVALID>", "'auto'", "'break'", "'boolean'", 
                     "'do'", "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "','", "';'", "'='", "':'", 
                     "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "BLOCK_COMMENT", 
                      "LINE_COMMENT", "AUTO", "BREAK", "BOOLEAN", "DO", 
                      "ELSE", "FALSE", "FLOAT", "FOR", "FUNCTION", "IF", 
                      "INTEGER", "RETURN", "STRING", "TRUE", "WHILE", "VOID", 
                      "OUT", "CONTINUE", "OF", "INHERIT", "ARRAY", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "NOT", "AND", "OR", "EQUAL", 
                      "DIFF", "SMALLER", "SMALLER_OR_EQUAL", "GREATER", 
                      "GREATER_OR_EQUAL", "CONCAT", "OP_BOOL", "OP_INT", 
                      "OP_FLOAT", "OP_STRING", "COMMA", "SEMI", "ASSIGN", 
                      "COLON", "DOT", "LB", "RB", "LP", "RP", "LS", "RS", 
                      "INTLIT", "FLOATLIT", "STRINGLIT", "ID", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_funcdecl = 3
    RULE_paramlist = 4
    RULE_paramprime = 5
    RULE_param = 6
    RULE_block_stmt = 7
    RULE_stmtlist = 8
    RULE_stmt = 9
    RULE_assignstmt = 10
    RULE_ifstmt = 11
    RULE_forstmt = 12
    RULE_whilestmt = 13
    RULE_dowhilestmt = 14
    RULE_breakstmt = 15
    RULE_continuestmt = 16
    RULE_returnstmt = 17
    RULE_callstmt = 18
    RULE_spec_func = 19
    RULE_readInt = 20
    RULE_printInt = 21
    RULE_readFloat = 22
    RULE_printFloat = 23
    RULE_readBool = 24
    RULE_printBool = 25
    RULE_readString = 26
    RULE_printString = 27
    RULE_superr = 28
    RULE_preventDefault = 29
    RULE_intVal = 30
    RULE_floatVal = 31
    RULE_stringVal = 32
    RULE_boolVal = 33
    RULE_vardecl = 34
    RULE_helper = 35
    RULE_basecase = 36
    RULE_notassign = 37
    RULE_scalar_var = 38
    RULE_exprlist = 39
    RULE_expr = 40
    RULE_expr1 = 41
    RULE_expr2 = 42
    RULE_expr3 = 43
    RULE_expr4 = 44
    RULE_expr5 = 45
    RULE_expr6 = 46
    RULE_expr7 = 47
    RULE_expr8 = 48
    RULE_subexpr = 49
    RULE_idx_op = 50
    RULE_callexpr = 51
    RULE_arglist = 52
    RULE_arglistprime = 53
    RULE_idlist = 54
    RULE_arraylit = 55
    RULE_subarrayitem = 56
    RULE_arritems = 57
    RULE_func_typ = 58
    RULE_var_typ = 59
    RULE_arraydecl = 60
    RULE_intlist = 61
    RULE_typ = 62
    RULE_op_relational = 63
    RULE_op_mul = 64
    RULE_boollit = 65

    ruleNames =  [ "program", "decllist", "decl", "funcdecl", "paramlist", 
                   "paramprime", "param", "block_stmt", "stmtlist", "stmt", 
                   "assignstmt", "ifstmt", "forstmt", "whilestmt", "dowhilestmt", 
                   "breakstmt", "continuestmt", "returnstmt", "callstmt", 
                   "spec_func", "readInt", "printInt", "readFloat", "printFloat", 
                   "readBool", "printBool", "readString", "printString", 
                   "superr", "preventDefault", "intVal", "floatVal", "stringVal", 
                   "boolVal", "vardecl", "helper", "basecase", "notassign", 
                   "scalar_var", "exprlist", "expr", "expr1", "expr2", "expr3", 
                   "expr4", "expr5", "expr6", "expr7", "expr8", "subexpr", 
                   "idx_op", "callexpr", "arglist", "arglistprime", "idlist", 
                   "arraylit", "subarrayitem", "arritems", "func_typ", "var_typ", 
                   "arraydecl", "intlist", "typ", "op_relational", "op_mul", 
                   "boollit" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    BLOCK_COMMENT=11
    LINE_COMMENT=12
    AUTO=13
    BREAK=14
    BOOLEAN=15
    DO=16
    ELSE=17
    FALSE=18
    FLOAT=19
    FOR=20
    FUNCTION=21
    IF=22
    INTEGER=23
    RETURN=24
    STRING=25
    TRUE=26
    WHILE=27
    VOID=28
    OUT=29
    CONTINUE=30
    OF=31
    INHERIT=32
    ARRAY=33
    ADD=34
    SUB=35
    MUL=36
    DIV=37
    MOD=38
    NOT=39
    AND=40
    OR=41
    EQUAL=42
    DIFF=43
    SMALLER=44
    SMALLER_OR_EQUAL=45
    GREATER=46
    GREATER_OR_EQUAL=47
    CONCAT=48
    OP_BOOL=49
    OP_INT=50
    OP_FLOAT=51
    OP_STRING=52
    COMMA=53
    SEMI=54
    ASSIGN=55
    COLON=56
    DOT=57
    LB=58
    RB=59
    LP=60
    RP=61
    LS=62
    RS=63
    INTLIT=64
    FLOATLIT=65
    STRINGLIT=66
    ID=67
    WS=68
    ERROR_CHAR=69
    UNCLOSE_STRING=70
    ILLEGAL_ESCAPE=71

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(BKITParser.DecllistContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.decllist()
            self.state = 133
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(BKITParser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(BKITParser.DecllistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_decllist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecllist" ):
                listener.enterDecllist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecllist" ):
                listener.exitDecllist(self)




    def decllist(self):

        localctx = BKITParser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.decl()
                self.state = 136
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(BKITParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(BKITParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = BKITParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ID)
            else:
                return self.getToken(BKITParser.ID, i)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def func_typ(self):
            return self.getTypedRuleContext(BKITParser.Func_typContext,0)


        def LB(self):
            return self.getToken(BKITParser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(BKITParser.ParamlistContext,0)


        def RB(self):
            return self.getToken(BKITParser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(BKITParser.Block_stmtContext,0)


        def INHERIT(self):
            return self.getToken(BKITParser.INHERIT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_funcdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdecl" ):
                listener.enterFuncdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdecl" ):
                listener.exitFuncdecl(self)




    def funcdecl(self):

        localctx = BKITParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(BKITParser.ID)
            self.state = 146
            self.match(BKITParser.COLON)
            self.state = 147
            self.match(BKITParser.FUNCTION)
            self.state = 148
            self.func_typ()
            self.state = 149
            self.match(BKITParser.LB)
            self.state = 150
            self.paramlist()
            self.state = 151
            self.match(BKITParser.RB)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.INHERIT:
                self.state = 152
                self.match(BKITParser.INHERIT)
                self.state = 153
                self.match(BKITParser.ID)


            self.state = 156
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramprime(self):
            return self.getTypedRuleContext(BKITParser.ParamprimeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_paramlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamlist" ):
                listener.enterParamlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamlist" ):
                listener.exitParamlist(self)




    def paramlist(self):

        localctx = BKITParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_paramlist)
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.OUT, BKITParser.INHERIT, BKITParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.paramprime()
                pass
            elif token in [BKITParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(BKITParser.ParamContext,0)


        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def paramprime(self):
            return self.getTypedRuleContext(BKITParser.ParamprimeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_paramprime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamprime" ):
                listener.enterParamprime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamprime" ):
                listener.exitParamprime(self)




    def paramprime(self):

        localctx = BKITParser.ParamprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramprime)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.param()
                self.state = 163
                self.match(BKITParser.COMMA)
                self.state = 164
                self.paramprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(BKITParser.TypContext,0)


        def INHERIT(self):
            return self.getToken(BKITParser.INHERIT, 0)

        def OUT(self):
            return self.getToken(BKITParser.OUT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = BKITParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.INHERIT:
                self.state = 169
                self.match(BKITParser.INHERIT)


            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.OUT:
                self.state = 172
                self.match(BKITParser.OUT)


            self.state = 175
            self.match(BKITParser.ID)
            self.state = 176
            self.match(BKITParser.COLON)
            self.state = 177
            self.typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def stmtlist(self):
            return self.getTypedRuleContext(BKITParser.StmtlistContext,0)


        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_block_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_stmt" ):
                listener.enterBlock_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_stmt" ):
                listener.exitBlock_stmt(self)




    def block_stmt(self):

        localctx = BKITParser.Block_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(BKITParser.LP)
            self.state = 180
            self.stmtlist()
            self.state = 181
            self.match(BKITParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(BKITParser.StmtContext,0)


        def stmtlist(self):
            return self.getTypedRuleContext(BKITParser.StmtlistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stmtlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtlist" ):
                listener.enterStmtlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtlist" ):
                listener.exitStmtlist(self)




    def stmtlist(self):

        localctx = BKITParser.StmtlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_stmtlist)
        try:
            self.state = 187
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.T__0, BKITParser.T__1, BKITParser.T__2, BKITParser.T__3, BKITParser.T__4, BKITParser.T__5, BKITParser.T__6, BKITParser.T__7, BKITParser.T__8, BKITParser.T__9, BKITParser.BREAK, BKITParser.DO, BKITParser.FOR, BKITParser.IF, BKITParser.RETURN, BKITParser.WHILE, BKITParser.CONTINUE, BKITParser.LP, BKITParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.stmt()
                self.state = 184
                self.stmtlist()
                pass
            elif token in [BKITParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(BKITParser.VardeclContext,0)


        def assignstmt(self):
            return self.getTypedRuleContext(BKITParser.AssignstmtContext,0)


        def returnstmt(self):
            return self.getTypedRuleContext(BKITParser.ReturnstmtContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(BKITParser.CallstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(BKITParser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(BKITParser.ForstmtContext,0)


        def whilestmt(self):
            return self.getTypedRuleContext(BKITParser.WhilestmtContext,0)


        def dowhilestmt(self):
            return self.getTypedRuleContext(BKITParser.DowhilestmtContext,0)


        def breakstmt(self):
            return self.getTypedRuleContext(BKITParser.BreakstmtContext,0)


        def spec_func(self):
            return self.getTypedRuleContext(BKITParser.Spec_funcContext,0)


        def continuestmt(self):
            return self.getTypedRuleContext(BKITParser.ContinuestmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(BKITParser.Block_stmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = BKITParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmt)
        try:
            self.state = 201
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 189
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 190
                self.assignstmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 191
                self.returnstmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 192
                self.callstmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 193
                self.ifstmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 194
                self.forstmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 195
                self.whilestmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 196
                self.dowhilestmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 197
                self.breakstmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 198
                self.spec_func()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 199
                self.continuestmt()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 200
                self.block_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scalar_var(self):
            return self.getTypedRuleContext(BKITParser.Scalar_varContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_assignstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignstmt" ):
                listener.enterAssignstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignstmt" ):
                listener.exitAssignstmt(self)




    def assignstmt(self):

        localctx = BKITParser.AssignstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self.scalar_var()
            self.state = 204
            self.match(BKITParser.ASSIGN)
            self.state = 205
            self.expr()
            self.state = 206
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

